--- a/settings.gradle
+++ b/settings.gradle
@@ -5,12 +5,16 @@ pluginManagement {
         mavenCentral()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' } //원형차트
+        jcenter()
     }
 }
+
 rootProject.name = "GURU_Pig"
 include ':app'
