--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' } //원형차트
+        maven { url 'https://jitpack.io' } //차트
         jcenter()
     }
 }
