--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.GURU_Pig"
         tools:targetApi="31">
         <activity
+            android:name=".Piechart"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Day"
             android:exported="false" />
         <activity
