--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.gastricspark:scrolldatepicker:0.0.1'//주간
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'//주간달력
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'//원형차트
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
